# markov_chain

./: pyproject.toml
notebooks/: mc_simulation_exercise.ipynb
